[gd_scene load_steps=9 format=3 uid="uid://drbfy20lnxnl0"]

[ext_resource type="Script" uid="uid://xy85b8xbi3ak" path="res://ui/menu_config/menu_config.gd" id="1_7wffm"]
[ext_resource type="PackedScene" uid="uid://c8lapfbcseu04" path="res://ui/menu_config/input_button.tscn" id="1_ndumg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7wffm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gfdrd"]
content_margin_left = 20.0
content_margin_top = 15.0
content_margin_right = 20.0
content_margin_bottom = 15.0
bg_color = Color(0.242188, 0.242188, 0.242188, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgm8q"]
content_margin_left = 20.0
content_margin_top = 15.0
content_margin_right = 20.0
content_margin_bottom = 15.0
bg_color = Color(0.138021, 0.138021, 0.138021, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_622vu"]
content_margin_left = 30.0
content_margin_top = 10.0
content_margin_right = 30.0
content_margin_bottom = 10.0
bg_color = Color(0.15, 0.15, 0.15, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7wffm"]
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.449031, 0.660738, 0.112868, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c8v1g"]
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.154852, 0.318792, 0.00717196, 1)

[node name="InputSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7wffm")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_7wffm")
text = "%%KM_TITLE"

[node name="ResetButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_gfdrd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gfdrd")
theme_override_styles/normal = SubResource("StyleBoxFlat_rgm8q")
text = "%%KM_RESET"

[node name="SearchBar" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_622vu")
theme_override_styles/read_only = SubResource("StyleBoxFlat_622vu")
theme_override_styles/normal = SubResource("StyleBoxFlat_622vu")
placeholder_text = "%%KM_SEARCH"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="InputButton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("1_ndumg")]
layout_mode = 2

[node name="InputButton2" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("1_ndumg")]
layout_mode = 2

[node name="InputButton3" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("1_ndumg")]
layout_mode = 2

[node name="InputButton4" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("1_ndumg")]
layout_mode = 2

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_7wffm")
theme_override_styles/normal = SubResource("StyleBoxFlat_c8v1g")
text = "%%KM_SAVEKEYCHANGE"

[node name="ReturnMainMenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
text = "%%RETURN"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/SearchBar" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
